--- a/R/QMode_Miesch1976.Rmd
+++ b/R/QMode_Miesch1976.Rmd
@@ -69,19 +69,20 @@ The range transformed data is identical to the data in @miesch_q-mode_1976 [, Ta
 
 ## Normalization factors $t_i$
 
-The normalization suggested byt @miesch_q-mode_1976 results in rows where the sum of squares equals 1 (in contrast to @klovan_algorithm_1971 where the simple sum equals 1).
+The normalization suggested byt @miesch_q-mode_1976 results in rows where the sum of squares equals 1:
 
 $t_i = \sqrt{\displaystyle\sum_{j}{x'^{2}_{ij}}}$
 
 ```{r}
 normalization_factors <- function(data) {
   data %>%
-    range_transformed() %>%
     transmute(ti = Reduce(function(u, v){u+v**2}, ., 0)**0.5) %>%
     as_vector()
 }
 
-normalization_factors(original_data)
+original_data %>%
+  range_transformed() %>%
+  normalization_factors()
 ```
 
 The normalization factors are equal to those from @miesch_q-mode_1976 [, Table 1C].
@@ -90,9 +91,13 @@ The normalization factors are equal to those from @miesch_q-mode_1976 [, Table 1
 
 
 ```{r}
+normalize <- function(data) {
+  diag(normalization_factors(data)**-1) %*% as.matrix(data)
+}
+
 normalize_and_transform <- function(data) {
-  as.matrix(range_transformed(data) / 
-    normalization_factors(data))
+  transformed <- range_transformed(data)
+  diag(normalization_factors(transformed)**-1) %*% as.matrix(transformed)
 }
 
 normalize_and_transform(original_data)
@@ -130,19 +135,24 @@ The following part of the Q-Mode analysis is done as described in @klovan_algori
 
 ### Row normalization
 
-Calculate a diagonal matrix with the row-sum of squares:
+The following is the normalization as described in @klovan_algorithm_1971 which is based on the square of row-sums. This normalization does not get used but is just implemented here. Instead the normalization described by @miesch_q-mode_1976, based on sum of squares is being used to get consistent results with the example data in that paper.
+
+Calculate a diagonal matrix with the row-sums of the squares:
 
 ```{r}
 rowsum_square_diag <- function(data) {
   data %>%
-    rowSums() %>%
     (function(x){x**2}) %>%
+    rowSums() %>%
     diag()
 }
 
 original_data %>%
+  range_transformed() %>%
   rowsum_square_diag()
 ```
+
+These values are identical to the squared normalization factors $t_i^2$ described by @miesch_q-mode_1976.
 
 Calculate row-normalized data matrix $W = D^{-1/2}X$:
 
@@ -155,16 +165,18 @@ row_normalized_data <- function(data) {
   D_ %*% X
 }
 
-row_normalized_data(range_transformed( original_data))
+row_normalized_data(range_transformed(original_data))
 ```
 
-The simple row sums should be 1:
+The row items should have length 1:
 
 ```{r}
-original_data %>%
-  row_normalized_data() %>%
-  rowSums()
+row_normalized_data(original_data)**2 %>%
+  rowSums() %>%
+  sqrt()
 ```
+
+The normalization is equivalent in  @miesch_q-mode_1976 and @klovan_algorithm_1971. In the following code the normalization defined first will be used.
 
 ### Normal Q-Mode via Cosine-Theta
 
@@ -172,51 +184,56 @@ Cosine-theta matrix $S = WW'$:
 
 ```{r}
 cosine_theta <- function(data) {
-  W <- normalize_and_transform(data)
+  W <- normalize(data)
   W %*% t(W)
 }
 
-cosine_theta(original_data)
+original_data %>%
+  range_transformed() %>%
+  cosine_theta()
 ```
 
 Eigenvalues of the cosine-theta matrix $S$:
 
 ```{r}
-eigen(cosine_theta(original_data))$values
+eigen(cosine_theta(range_transformed(original_data)))$values
 ```
 
-Calculate the principal factor-loadings matrix $Q=U\Lambda^{-0.5}$:
+Calculate the principal factor-loadings matrix $Q=U\Lambda^{0.5}$ (@klovan_algorithm_1971 says this should be $Q=U\Lambda^{-0.5}$, but this lead to inconsistent results):
 
 ```{r}
 principal_factor_loadings <- function(data) {
   S   <- cosine_theta(data)
   eig <- svd(S)
   U   <- eig$u[,1:3]
-  A_  <- diag(eig$d[1:3]**-0.5)
+  A_  <- diag(eig$d[1:3]**0.5)
   U %*% A_
 }
 
-principal_factor_loadings(original_data)
+original_data %>%
+  range_transformed() %>%
+  principal_factor_loadings()
 ```
 
 Calculate the principal factor-score matrix $F_p=W'Q\Lambda^{-1}$:
 
 ```{r}
 principal_factor_score <- function(data) {
-  W_ <- t(normalize_and_transform(data))
-  #correct results with cabfac_Q but wrong with principal_factor_loadings
-  Q  <- cabfac_Q(data)
+  W_ <- t(normalize(data))
   Q  <- principal_factor_loadings(data)
   S  <- cosine_theta(data)
   x  <- svd(S)$d[1:3]**-1
   A_ <- diag(x)
-  W_ %*% Q %*% A_
+  W_ %*% Q %*% A_ %>%
+    t()
 }
 
-t(principal_factor_score(original_data))
+original_data %>%
+  range_transformed() %>%
+  principal_factor_score()
 ```
 
-These do not match with the values in Miesch at all. They do when using `cabfac_Q` (see above). Something might be wrong in `principal_factor_loadings`, which might be related to using a different normalization.
+These do match with the values in @miesch_q-mode_1976.
 
 ### CABFAC algorithm
 
@@ -228,19 +245,24 @@ $Q = W \mathring{U}$
 
 ```{r}
 cabfac_P <- function(data) {
-  W <- normalize_and_transform(data) 
+  W <- normalize(data) 
   t(W) %*% W
 }
 
 cabfac_Q <- function(data) {
-  W <- normalize_and_transform(data) 
+  W <- normalize(data) 
   P <- cabfac_P(data)
   U_circ <- svd(P)$u
   W %*% U_circ
 }
 
-cabfac_Q(original_data)
-cabfac_P(original_data)
+original_data %>%
+  range_transformed() %>%
+  cabfac_P()
+
+original_data %>%
+  range_transformed() %>%
+  cabfac_Q()
 ```
 
 Unscaled scores $F_p$:
@@ -252,15 +274,17 @@ unscaled_scores <- function(data) {
     t()
 }
 
-unscaled_scores(original_data)
+original_data %>%
+  range_transformed() %>%
+  unscaled_scores()
 ```
 
 Alternatively calculate it from `cabfac_Q`:
 
 ```{r}
 t(normalize_and_transform(original_data)) %*%
-  cabfac_Q(original_data) %*%
-  diag(svd(cosine_theta(original_data))$d**-1)[1:3,1:3] %>%
+  cabfac_Q(range_transformed(original_data)) %*%
+  diag(svd(cosine_theta(range_transformed(original_data)))$d**-1)[1:3,1:3] %>%
   t()
 ```
 
@@ -272,9 +296,9 @@ Same result as above, both matching the values from @miesch_q-mode_1976 [, Table
 Comparison of eigenvalues (non-zero eigenvalues should be identical):
 
 ```{r}
-svd(cabfac_P(original_data))$d
+svd(cabfac_P(range_transformed(original_data)))$d
 
-svd(cosine_theta(original_data))$d
+svd(cosine_theta(range_transformed(original_data)))$d
 ```
 
 The product of $a''_{ik}$ and $f''_{kj}$ should equal the normalized, transformed data.
@@ -282,9 +306,13 @@ The product of $a''_{ik}$ and $f''_{kj}$ should equal the normalized, transforme
 Calculated data:
 
 ```{r}
-cabfac_Q(original_data) %*% unscaled_scores(original_data) %>% as_tibble()
+(function () {
+  X_ <- cabfac_Q(range_transformed(original_data)) %*% unscaled_scores(range_transformed(original_data))
+  X_[X_ < 1e-16] <- 0
+  as_tibble(X_)
+})()
 
-principal_factor_loadings(original_data) %*% principal_factor_score(original_data)
+principal_factor_loadings(range_transformed(original_data)) %*% principal_factor_score(range_transformed( original_data))
 ```
 
 Original data:
